--- a/src/page/index/Home/SearchBar/SearchBar.scss
+++ b/src/page/index/Home/SearchBar/SearchBar.scss
@@ -24,6 +24,8 @@
    }
    .location-text {
      position: relative;
+     top: -32px;
+     left: 18px;
      display: inline-block;
      font-size: px2rem(14px);
      color: #fff;
